Fix header on smaller screens. - Note: assumes flex-box, so it won't look pretty on older versions of Android browser, or older IE. (But I don't care!) - Fixes #2 - Fixes #14

--- a/design/sass/_media.scss
+++ b/design/sass/_media.scss
@@ -1,12 +1,32 @@
 @import 'mixins';
 
 @media only screen and (max-width: 800px) {
+
    header#banner {
       h1 {
-         @include flexbox();
-         @include justify-content(center);
-         @include align-items(flex-start);
-         @include flex-flow(row wrap);
+         a, a:visited {
+            @include flexbox();
+            @include justify-content(space-around);
+            @include align-content(center);
+            @include flex-flow(column wrap);
+            @include flex(1 50%);
+            height: 3em;
+         }
+         #logo {
+            @include flex(2 100%);
+
+            img {
+               margin-top: 28px;
+               margin-right: 12px;
+            }
+         }
+
+         #winning, #slowly {
+            margin: {
+               left: 0;
+               right: 0;
+            }
+         }
       }
    }
 
@@ -43,6 +63,11 @@
 
    .flex-item {
       @include flex(1 100%);
+   }
+
+   header#banner #logo img {
+      height: $fsh1;
+      width: $fsh1;
    }
 
    #winning, #slowly {
